--- a/collective/buildbot/templates/buildbot/public_html/buildbot.css
+++ b/collective/buildbot/templates/buildbot/public_html/buildbot.css
@@ -1,6 +1,8 @@
 body {
     font-family: Verdana, Courier, sans-sarif;
     font-size: 75%;
+    color: black;
+    background-color: white;
 }
 
 a:link, a:visited {
